# Game-of-Life-in-Rust

./: Cargo.toml  bacon.toml  bun.lockb  index.html
src/: app.rs  board.rs  cell.rs  game.rs  main.rs  rules.rs  square.rs  status.rs  terminal.rs
