[package]
name = "gol"
version = "0.1.0"
edition = "2021"


[profile.release]
opt-level = 'z'   # Optimize for size.
lto = true        # Enable Link Time Optimisation
codegen-units = 1 # Reduced to increase optimisations.
panic = 'abort'   # Abort on panic
strip = "symbols" # Strip symbols from binary


[dependencies]
console_error_panic_hook = "0.1.7"
console_log = { version = "1", features = ["color"] }
leptos = { version = "0.6.9", features = ["csr", "nightly"] }

